// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uses default formatter 1`] = `
<time
  className="root"
  dateTime="2108-12-17T06:24:00.000Z"
  title="2108-12-17T06:24:00.000Z"
>
  2108-12-17T06:24:00.000Z
</time>
`;

exports[`uses formatter from context 1`] = `
<time
  className="root"
  dateTime="2108-12-17T06:24:00.000Z"
  title="2108-12-17T06:24:00.000Z"
>
  My Formatter
</time>
`;
